# project-tools

./: .gitignore  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  logging.conf  pyproject.toml
backend/scripts/: run.sh
backend/sql/: init.sql  init_db.sql  init_ddl.sql  init_dml.sql  rdmdb-dump-rdmdb-202605161742.sql  rdmdb-dump-rdmdb-202605191334.sql
backend/src/: gen_hash.py
backend/src/api/: auth.py  main.py  scheduler.py
backend/src/api/routes/: auth.py  data_import.py  projects.py  reports.py  scheduler.py
backend/src/db/: database.py  dboperator.py  models.py  sqls.py
backend/src/holiday/: __init__.py  holiday_service.py  holidays.py
backend/src/task/: __init__.py  main.py  remind_expire_task.py  remind_sonar_scan.py  remind_week_story.py  report_rdm_data.py  report_wiki_data.py
backend/src/util/: color.py  dateattr.py  jira.py  qywx.py
docs/plans/: 2026-05-19-scheduler-refactor.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: dev.sh
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: auth.ts  dataImport.ts  index.ts  jobs.ts  projects.ts  reports.ts
frontend/src/router/: index.ts
sql/: init.sql
src/config/: project_sonar_key_map.py
src/db/: dboperator.py
src/holiday/: holidays.py
src/task/: main.py  remind_expire_task.py  remind_sonar_scan.py  remind_week_story.py  report_rdm_data.py  report_wiki_data.py
src/util/: jira.py
(+13 files in other folders)
