[project]
name = "project-tools"
version = "0.1.0"
description = "project tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "PyMySql>=1.1.1",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.0.0",
]
